Added sys admin page

--- a/views/update.hbs
+++ b/views/update.hbs
@@ -18,10 +18,9 @@
       </div>
       <form method="post">
         <input type="hidden" name="_csrf" value="{{csrfToken}}" />
-
         <label
           class="block text-gray-300 text-sm font-bold mb-1"
-          for="female_capacity"
+          for="earliest_admission"
         >
           Earliest admission date
         </label>
