--- a/views/admin-update.hbs
+++ b/views/admin-update.hbs
@@ -1,202 +1,75 @@
-{{#extends 'base'}}
+{{#extends "base"}}
 
-  {{#block 'title'}}🧠 Update Availability{{/block}}
+  {{#block "title"}}🧠 Update Availability{{/block}}
 
-  {{#block 'content'}}
+  {{#block "content"}}
     <a
-      class='bg-green-500 hover:bg-green-700 text-white text-xs w-full font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline'
-      href='/user/change-password'
+      class="bg-green-500 hover:bg-green-700 text-white text-xs w-full font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+      href="/user/change-password"
     >
       Click here if you want to change your password
     </a>
-    <form method='post' class='col-span-3'>
-      <input type='hidden' name='_csrf' value='{{csrfToken}}' />
+    <form method="post" class="col-span-3">
+      <input type="hidden" name="_csrf" value="{{csrfToken}}" />
       <div
-        class='grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-6'
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-6"
       >
         {{#each allOrgs}}
           <div
-            class='mb-5 w-full bg-gray-900 rounded-lg shadow-lg p-12 justify-center items-center'
+            class="mb-5 w-full bg-gray-900 rounded-lg shadow-lg p-12 justify-center items-center"
           >
-            <p class='text-xl text-white font-bold mb-4'>Updating for
+            <p class="text-xl text-white font-bold mb-4">Updating for
               {{this.org_name}}</p>
-            <!--Female start-->
-            <p class='text-xl text-gray-400 font-normal mb-3'><i
-                class='fas fa-female'
-              ></i>
-              Female</p>
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Capacity
-            </label>
-            <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.female_capacity}}
-              type='tel'
-              name='female_capacity{{this.id}}'
-              placeholder=''
-            />
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Pending
-            </label>
-            <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.female_pending}}
-              type='tel'
-              name='female_pending{{this.id}}'
-              placeholder=''
-            />
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Available
-            </label>
-            <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.female_available}}
-              type='tel'
-              name='female_available{{this.id}}'
-              placeholder=''
-            />
-            <!--Female end-->
 
-            <!--Male start-->
-            <p class='text-xl text-gray-400 font-normal mb-3 mt-5'><i
-                class='fas fa-male'
-              ></i>
-              Male</p>
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Capacity
+            <label
+              class="block text-gray-300 text-sm font-bold mb-1"
+              for="earliest_admission"
+            >
+              Earliest admission date
             </label>
             <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.male_capacity}}
-              type='tel'
-              name='male_capacity{{this.id}}'
-              placeholder=''
+              class="shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="earliest_admission"
+              type="date"
+              name="earliest_admission"
+              value={{dateFormat orgName.earliest_admission "YYYY-MM-DD"}}
             />
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Pending
+            <label
+              class="block text-gray-300 text-sm font-bold mb-1"
+              for="female_capacity"
+            >
+              No. of MediFund cases allowed
             </label>
             <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.male_pending}}
-              type='tel'
-              name='male_pending{{this.id}}'
-              placeholder=''
+              class="shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="medifund_cases"
+              type="tel"
+              name="medifund_cases"
+              placeholder=""
+              value={{orgName.medifund_cases}}
             />
-            <label class='block text-gray-300 text-sm font-bold mb-1'>
-              Available
-            </label>
-            <input
-              class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value={{this.male_available}}
-              type='tel'
-              name='male_available{{this.id}}'
-              placeholder=''
-            />
-            <!--Male end-->
-
-            {{#if this.special_prog_name}}
-              <hr class='mt-4' />
-              <!--Special Program Start-->
-              <p class='text-xl text-gray-200 font-bold my-4'>
-                Special Programme:
-                {{this.special_prog_name}}</p>
-              <!--Female start-->
-              <p class='text-xl text-gray-400 font-normal mb-3'><i
-                  class='fas fa-female'
-                ></i>
-                Female</p>
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Capacity
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_female_capacity}}
-                type='tel'
-                name='special_prog_female_capacity{{this.id}}'
-                placeholder=''
-              />
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Pending
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_female_pending}}
-                type='tel'
-                name='special_prog_female_pending{{this.id}}'
-                placeholder=''
-              />
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Available
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_female_available}}
-                type='tel'
-                name='special_prog_female_available{{this.id}}'
-                placeholder=''
-              />
-              <!--Female end-->
-
-              <!--Male start-->
-              <p class='text-xl text-gray-400 font-normal mb-3 mt-5'><i
-                  class='fas fa-male'
-                ></i>
-                Male</p>
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Capacity
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_male_capacity}}
-                type='tel'
-                name='special_prog_male_capacity{{this.id}}'
-                placeholder=''
-              />
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Pending
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_male_pending}}
-                type='tel'
-                name='special_prog_male_pending{{this.id}}'
-                placeholder=''
-              />
-              <label class='block text-gray-300 text-sm font-bold mb-1'>
-                Available
-              </label>
-              <input
-                class='shadow appearance-none border rounded mb-4 w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-                value={{this.special_prog_male_available}}
-                type='tel'
-                name='special_prog_male_available{{this.id}}'
-                placeholder=''
-              />
-              <!--Male end-->
-              <!--Special Program End-->
-            {{/if}}
-            <hr class='mt-4' />
-            <p class='text-xl text-gray-400 font-normal mb-3 mt-5'>
-              <i class='far fa-comment'></i>
+            <hr class="mt-4" />
+            <p class="text-xl text-gray-400 font-normal mb-3 mt-5">
+              <i class="far fa-comment"></i>
               Special Remarks</p>
             <input
-              class='shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
-              value='{{this.special_remarks}}'
-              type='text'
-              name='special_remarks{{this.id}}'
-              id='special_remarks{{this.id}}'
-              placeholder=''
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+              id="special_remarks"
+              type="text"
+              name="special_remarks"
+              placeholder=""
+              value="{{orgName.special_remarks}}"
             />
             <p
-              class='text-white text-xs text-left italic mb-4 mt-2'
-              id='count{{this.id}}'
+              class="text-white text-xs text-left italic mb-4 mt-2"
+              id="count{{this.id}}"
             ></p>
           </div>
         {{/each}}
       </div>
       <button
-        class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline'
-        type='submit'
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        type="submit"
       >
         Update
       </button>
@@ -204,7 +77,7 @@
 
   {{/block}}
 
-  {{#block 'js'}}
+  {{#block "js"}}
     <script>
       let countChars = (i) => { let specialRemarks =
       document.getElementById(`special_remarks${i.toString()}`);
