Fixed admin update page

--- a/views/update.hbs
+++ b/views/update.hbs
@@ -33,7 +33,7 @@
         />
         <label
           class="block text-gray-300 text-sm font-bold mb-1"
-          for="female_capacity"
+          for="medifund_cases"
         >
           No. of MediFund cases allowed
         </label>
