--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,8 +21,8 @@
             }}</p>
           <hr class="mt-4" />
           <div class="grid grid-cols-2 my-5">
-            <p class="text-base text-gray-400 font-normal">Earliest admission</p>
-            <p class="text-xl text-white font-bold">{{dateFormat
+            <p class="text-base text-gray-400 font-normal mb-2">Earliest admission</p>
+            <p class="text-xl text-white font-bold mb-2">{{dateFormat
                 this.earliest_admission
                 "Do MMMM YYYY"
               }}</p>
